hosting: add /image/** and /video/** rewrites; fix links to use clean routes; make image page nav root-relative

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             <small class="eyebrow">CLARIO.IMAGE</small>
             <h3>Meet Clario Image</h3>
             <p>Upload, edit, and generate stunning visuals.</p>
-            <a class="btn btn-dark" href="image/index.html">Start Editing</a>
+            <a class="btn btn-dark" href="/image">Start Editing</a>
           </article>
           <article class="card">
             <small class="eyebrow">CLARIO.VIDEO</small>
             <h3>Meet Clario Video</h3>
             <p>Turn prompts and photos into cinematic clips.</p>
-            <a class="btn btn-light" href="video/index.html">Generate Video</a>
+            <a class="btn btn-light" href="/video">Generate Video</a>
           </article>
         </div>
       </div>
