--- a/success.html
+++ b/success.html
@@ -17,8 +17,8 @@
       <a href="/" class="logo" aria-label="Clario home">CLARIO</a>
       <nav class="nav-links" aria-label="Primary">
         <a href="/">Home</a>
-        <a href="/image/index.html">Image</a>
-        <a href="/video/index.html">Video</a>
+        <a href="/image">Image</a>
+        <a href="/video">Video</a>
         <a href="/#pricing">Pricing</a>
       </nav>
       <a class="btn btn-light" href="/signin">Sign in</a>
@@ -39,7 +39,7 @@
       <div id="signed-in" style="display:none; margin-top:24px;">
         <p><strong>Account:</strong> <span id="user-email"></span></p>
         <p><strong>Credits:</strong> <span id="credits">—</span></p>
-        <a class="btn btn-dark" href="/image/index.html" style="margin-top:16px;">Start Creating</a>
+        <a class="btn btn-dark" href="/image" style="margin-top:16px;">Start Creating</a>
       </div>
     </section>
   </main>
